[gd_scene load_steps=22 format=2]

[ext_resource path="res://Textures/UI/Menu-Background.png" type="Texture" id=1]
[ext_resource path="res://Textures/UI/Contract-List.png" type="Texture" id=2]
[ext_resource path="res://Textures/UI/Checkmark.png" type="Texture" id=3]
[ext_resource path="res://Textures/UI/Cross-Hover.png" type="Texture" id=4]
[ext_resource path="res://Textures/UI/Checkmark-Hover.png" type="Texture" id=5]
[ext_resource path="res://Textures/UI/Cross.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Scene/ContractMenu.gd" type="Script" id=7]
[ext_resource path="res://Fonts/nasalization-regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Textures/UI/Universal-Border.png" type="Texture" id=9]
[ext_resource path="res://Themes/Dropdown.tres" type="Theme" id=10]
[ext_resource path="res://Scripts/UI/Contract.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 38
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.768627, 0.768627, 0.768627, 0.65098 )

[sub_resource type="DynamicFont" id=2]
size = 44
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 44
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.211765, 0.211765, 0.211765, 0.247059 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0.247059 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="ImageTexture" id=11]

[sub_resource type="ImageTexture" id=12]

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 7 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -721.0
margin_top = -402.0
margin_right = 1201.0
margin_bottom = 680.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="ListBackground" type="TextureRect" parent="."]
anchor_bottom = 1.0
margin_left = 5.0
margin_right = 560.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Contract1" type="Control" parent="ListBackground"]
margin_right = 550.0
margin_bottom = 150.0
script = ExtResource( 11 )
num = 1

[node name="Type" type="Label" parent="ListBackground/Contract1"]
margin_right = 550.0
margin_bottom = 96.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="ListBackground/Contract1"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.0
margin_top = 37.0
margin_right = 104.0
margin_bottom = 51.0
custom_styles/fg = SubResource( 10 )
value = 30.0
percent_visible = false

[node name="Cash" type="TextureRect" parent="ListBackground/Contract1"]
visible = false
margin_top = 84.0
margin_right = 155.0
margin_bottom = 150.0
texture = ExtResource( 9 )
expand = true

[node name="RewardCash" type="Label" parent="ListBackground/Contract1/Cash"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.0352941, 0.470588, 0, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="Science" type="TextureRect" parent="ListBackground/Contract1"]
visible = false
margin_left = 432.0
margin_top = 84.0
margin_right = 551.0
margin_bottom = 150.0
texture = ExtResource( 9 )
expand = true

[node name="RewardScience" type="Label" parent="ListBackground/Contract1/Science"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.054902, 0.482353, 0.65098, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="Button" type="Button" parent="ListBackground/Contract1"]
margin_right = 555.0
margin_bottom = 150.0
focus_mode = 0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 5 )
disabled = true
enabled_focus_mode = 0

[node name="Contract2" type="Control" parent="ListBackground"]
margin_top = 150.0
margin_right = 550.0
margin_bottom = 300.0
script = ExtResource( 11 )
num = 2

[node name="Type" type="Label" parent="ListBackground/Contract2"]
margin_right = 550.0
margin_bottom = 96.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="ListBackground/Contract2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.0
margin_top = 37.0
margin_right = 104.0
margin_bottom = 51.0
custom_styles/fg = SubResource( 10 )
value = 30.0
percent_visible = false

[node name="Cash" type="TextureRect" parent="ListBackground/Contract2"]
visible = false
margin_top = 84.0
margin_right = 155.0
margin_bottom = 150.0
texture = ExtResource( 9 )
expand = true

[node name="RewardCash" type="Label" parent="ListBackground/Contract2/Cash"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.0352941, 0.470588, 0, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="Science" type="TextureRect" parent="ListBackground/Contract2"]
visible = false
margin_left = 432.0
margin_top = 84.0
margin_right = 551.0
margin_bottom = 150.0
texture = ExtResource( 9 )
expand = true

[node name="RewardScience" type="Label" parent="ListBackground/Contract2/Science"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.054902, 0.482353, 0.65098, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="Button" type="Button" parent="ListBackground/Contract2"]
margin_right = 555.0
margin_bottom = 150.0
focus_mode = 0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 5 )
disabled = true
enabled_focus_mode = 0

[node name="Contract3" type="Control" parent="ListBackground"]
margin_top = 300.0
margin_right = 550.0
margin_bottom = 450.0
script = ExtResource( 11 )
num = 3

[node name="Type" type="Label" parent="ListBackground/Contract3"]
margin_right = 550.0
margin_bottom = 96.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="ListBackground/Contract3"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.0
margin_top = 37.0
margin_right = 104.0
margin_bottom = 51.0
custom_styles/fg = SubResource( 10 )
value = 30.0
percent_visible = false

[node name="Cash" type="TextureRect" parent="ListBackground/Contract3"]
visible = false
margin_top = 84.0
margin_right = 155.0
margin_bottom = 150.0
texture = ExtResource( 9 )
expand = true

[node name="RewardCash" type="Label" parent="ListBackground/Contract3/Cash"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.0352941, 0.470588, 0, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="Science" type="TextureRect" parent="ListBackground/Contract3"]
visible = false
margin_left = 432.0
margin_top = 84.0
margin_right = 551.0
margin_bottom = 150.0
texture = ExtResource( 9 )
expand = true

[node name="RewardScience" type="Label" parent="ListBackground/Contract3/Science"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.054902, 0.482353, 0.65098, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="Button" type="Button" parent="ListBackground/Contract3"]
margin_right = 555.0
margin_bottom = 150.0
focus_mode = 0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 5 )
disabled = true
enabled_focus_mode = 0

[node name="Contract4" type="Control" parent="ListBackground"]
margin_top = 450.0
margin_right = 550.0
margin_bottom = 600.0
script = ExtResource( 11 )
num = 4

[node name="Type" type="Label" parent="ListBackground/Contract4"]
margin_right = 550.0
margin_bottom = 96.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true

[node name="ProgressBar" type="ProgressBar" parent="ListBackground/Contract4"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.0
margin_top = 37.0
margin_right = 104.0
margin_bottom = 51.0
custom_styles/fg = SubResource( 10 )
value = 30.0
percent_visible = false

[node name="Cash" type="TextureRect" parent="ListBackground/Contract4"]
visible = false
margin_top = 84.0
margin_right = 155.0
margin_bottom = 150.0
texture = ExtResource( 9 )
expand = true

[node name="RewardCash" type="Label" parent="ListBackground/Contract4/Cash"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.0352941, 0.470588, 0, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="Science" type="TextureRect" parent="ListBackground/Contract4"]
visible = false
margin_left = 432.0
margin_top = 84.0
margin_right = 551.0
margin_bottom = 150.0
texture = ExtResource( 9 )
expand = true

[node name="RewardScience" type="Label" parent="ListBackground/Contract4/Science"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.054902, 0.482353, 0.65098, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="Button" type="Button" parent="ListBackground/Contract4"]
margin_right = 555.0
margin_bottom = 150.0
focus_mode = 0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 5 )
disabled = true
enabled_focus_mode = 0

[node name="Yes" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -87.0
margin_top = -94.0
margin_right = -21.0
margin_bottom = -28.0
disabled = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )
texture_disabled = SubResource( 11 )
texture_focused = ExtResource( 3 )
expand = true

[node name="No" type="TextureButton" parent="."]
margin_left = 831.0
margin_top = 506.0
margin_right = 897.0
margin_bottom = 572.0
disabled = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
texture_disabled = SubResource( 12 )
texture_focused = ExtResource( 6 )
expand = true

[node name="VScrollBar" type="VScrollBar" parent="."]
margin_left = 555.0
margin_right = 567.0
margin_bottom = 600.0
step = 1.0

[node name="Exit" type="Button" parent="."]
margin_left = 682.0
margin_top = 506.0
margin_right = 1084.0
margin_bottom = 744.0
rect_scale = Vector2( 0.275, 0.275 )
theme = ExtResource( 10 )
custom_colors/font_color_hover = Color( 0.172549, 0.172549, 0.172549, 1 )
text = "exit"

[connection signal="pressed" from="ListBackground/Contract1/Button" to="ListBackground/Contract1" method="onSelect"]
[connection signal="pressed" from="ListBackground/Contract2/Button" to="ListBackground/Contract2" method="onSelect"]
[connection signal="pressed" from="ListBackground/Contract3/Button" to="ListBackground/Contract3" method="onSelect"]
[connection signal="pressed" from="ListBackground/Contract4/Button" to="ListBackground/Contract4" method="onSelect"]
[connection signal="pressed" from="Yes" to="." method="yesPressed"]
[connection signal="pressed" from="No" to="." method="noPressed"]
[connection signal="value_changed" from="VScrollBar" to="." method="scrollChange"]
[connection signal="pressed" from="Exit" to="." method="exitPressed"]
